fix: Refactor GitHub Pages deployment workflow
Updated workflow to build and deploy static site to GitHub Pages with improved permissions and debug steps.

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,17 +1,17 @@
-name: Deploy static site to GitHub Pages
+name: Build and deploy static site to GitHub Pages (gh-pages)
 
 on:
   push:
     branches:
       - main
 
+# Need contents: write so the action can push to gh-pages branch using GITHUB_TOKEN
 permissions:
-  contents: read
+  contents: write
   pages: write
-  id-token: write
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -19,18 +19,21 @@ jobs:
 
       - name: Prepare public directory
         run: |
-          rm -rf public
+          rm -rf public || true
           mkdir public
-          # Copy site files to public, excluding .git and workflow files
+          # Copy site files to public, excluding git metadata and workflow files
           rsync -av --exclude='.git' --exclude='.github' --exclude='.gitignore' --exclude='README.md' ./ public/
 
-      - name: Configure Pages
-        uses: actions/configure-pages@v3
+      - name: Show public contents (debug)
+        run: |
+          echo "==== public/ listing ===="
+          ls -la public || true
 
-      - name: Upload artifact for deployment
-        uses: actions/upload-pages-artifact@v1
+      - name: Deploy to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: ./public
-
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          publish_branch: gh-pages
+          # optional: keep a clean history or allow empty commits
+          allow_empty_commit: true
